--- a/Slovak/main/SecurityCenter.apk/res/values-sk/arrays.xml
+++ b/Slovak/main/SecurityCenter.apk/res/values-sk/arrays.xml
@@ -93,19 +93,19 @@
         <item>Tento mesiac\u0020</item>
     </string-array>
     <string-array name="date_of_app_all">
-        <item>Včera 2G/3G\u0020</item>
-        <item>Dnes 2G/3G\u0020</item>
-        <item>Minulý mesiac 2G/3G\u0020</item>
-        <item>Tento mesiac 2G/3G\u0020</item>
+        <item>Včera Mob. dáta\u0020</item>
+        <item>Dnes Mob. dáta\u0020</item>
+        <item>Minulý mesiac Mob. dáta\u0020</item>
+        <item>Tento mesiac Mob. dáta\u0020</item>
         <item>Včera Wi-Fi\u0020</item>
         <item>Dnes Wi-Fi\u0020</item>
         <item>Minulý mesiac Wi-Fi\u0020</item>
         <item>Tento mesiac Wi-Fi\u0020</item>
     </string-array>
     <string-array name="date_of_app">
-        <item>Včera 2G/3G</item>
-        <item>Dnes 2G/3G</item>
-        <item>Tento mesiac 2G/3G</item>
+        <item>Včera Mob. dáta</item>
+        <item>Dnes Mob. dáta</item>
+        <item>Tento mesiac Mob. dáta</item>
     </string-array>
     <string-array name="network_speed_update_internals">
         <item>3 sekundy</item>
@@ -117,7 +117,7 @@
         <item>9 sekúnd</item>
     </string-array>
     <string-array name="traffic_sort_type">
-        <item>Využitie 2G/3G</item>
+        <item>Využitie Mob. dáta</item>
         <item>Využitie Wi-Fi</item>
     </string-array>
     <string-array name="traffic_setting_sms_template">
@@ -125,7 +125,7 @@
         <item>Nastaviť manuálne</item>
     </string-array>
     <string-array name="traffic_type">
-        <item>využité 2G/3G\u0020</item>
+        <item>využité Mob. dáta\u0020</item>
         <item>využité Wi-Fi\u0020</item>
     </string-array>
     <string-array name="date_of_traffic_prefix">
