--- a/Slovak/main/Settings.apk/res/values-sk/arrays.xml
+++ b/Slovak/main/Settings.apk/res/values-sk/arrays.xml
@@ -502,7 +502,7 @@
         <item>Linux</item>
     </string-array>
     <string-array name="msd_pc_system_install_summary">
-        <item>"2. Sprievodca sa zobrazí pri inštalácií, 
+        <item>"2. Sprievodca sa zobrazí pri inštalácii, 
 Postupujte podľa pokynov"</item>
         <item></item>
         <item></item>
