--- a/Slovak/main/PersonalAssistant.apk/res/values-sk/arrays.xml
+++ b/Slovak/main/PersonalAssistant.apk/res/values-sk/arrays.xml
@@ -35,4 +35,14 @@
         <item>Normálne</item>
         <item>Veľké</item>
     </string-array>
+   <string-array name="pa_home_week_days">
+        <item>Nedeľa</item>
+        <item>Pondelok</item>
+        <item>Utorok</item>
+        <item>Streda</item>
+        <item>Štvrtok</item>
+        <item>Piatok</item>
+        <item>Sobota</item>
+        <item>Nedeľa</item>
+    </string-array>    
 </resources>
