--- a/Slovak/main/Settings.apk/res/values-sk/arrays.xml
+++ b/Slovak/main/Settings.apk/res/values-sk/arrays.xml
@@ -1007,7 +1007,7 @@ Postupujte podľa pokynov"</item>
     </string-array>	
     <string-array name="default_vol_stream_entries">
 	<item>Zvonenie</item>
-	<item>Média</item>
+	<item>Médiá</item>
     </string-array>
     <string-array name="status_bar_settings_qs_layout_entries">
 	<item>Predvolené</item>
