--- a/Slovak/main/Settings.apk/res/values-sk/plurals.xml
+++ b/Slovak/main/Settings.apk/res/values-sk/plurals.xml
@@ -336,5 +336,9 @@
     <plurals name="num_minutes_ago">
         <item quantity="other">Pred %d minútami</item>
         <item quantity="one">Pred minútou</item>
-    </plurals>      		    
+    </plurals>      		
+    <plurals name="clean_time">
+        <item quantity="other">%ds</item>
+        <item quantity="one">%ds</item>
+    </plurals>    
 </resources>
