--- a/Slovak/main/MiGalleryLockscreen.apk/res/values-sk/arrays.xml
+++ b/Slovak/main/MiGalleryLockscreen.apk/res/values-sk/arrays.xml
@@ -8,10 +8,10 @@
 	 <item>Január</item>
          <item>Február</item>
          <item>Marec</item>
-         <item>apríl</item>
-         <item>máj</item>
-         <item>jún</item>
-         <item>júl</item>
+         <item>Apríl</item>
+         <item>Máj</item>
+         <item>Jún</item>
+         <item>Júl</item>
          <item>August</item>
          <item>September</item>
          <item>Október</item>
