--- a/Slovak/main/XiaomiAccount.apk/res/values-sk/plurals.xml
+++ b/Slovak/main/XiaomiAccount.apk/res/values-sk/plurals.xml
@@ -84,4 +84,9 @@
         <item quantity="other">Zariadenia: %d</item>
         <item quantity="one">Zariadenia: %d</item>
     </plurals>
+	
+    <plurals name="area_code_search_result_size">
+        <item quantity="other">Nájdených: %d</item>
+        <item quantity="one">Nájdených: %d</item>
+    </plurals>	
 </resources>
