--- a/Slovak/main/SecurityCenter.apk/res/values-sk/arrays.xml
+++ b/Slovak/main/SecurityCenter.apk/res/values-sk/arrays.xml
@@ -4,7 +4,7 @@
         <item>Raz</item>
         <item>Denne</item>
         <item>Pracovné dni (V Číne)</item>
-        <item>Pon. až Pia.</item>
+        <item>Pondelok až Piatok</item>
         <item>Vlastné</item>
     </string-array>
     <string-array name="alarm_repeat_type_no_workdays">
