--- a/Slovak/main/CloudBackup.apk/res/values-sk/plurals.xml
+++ b/Slovak/main/CloudBackup.apk/res/values-sk/plurals.xml
@@ -85,7 +85,7 @@
         <item quantity="one">Ostáva okolo %s min</item>
     </plurals>          
 <plurals name="backup_action_long_time_not_backup_content">
-         <item kvantita="other">Zdá sa, že ste položky nezálohovali %s týždňov. Vytvorte zálohy, aby ste nestratili nič dôležité.</item>
-         <item kvantita="one">Zdá sa, že ste %s týždeň nezálohovali položky. Vytvorte zálohy, aby ste nestratili nič dôležité.</item>
+         <item quantity="other">Zdá sa, že ste položky nezálohovali %s týždňov. Vytvorte zálohy, aby ste nestratili nič dôležité.</item>
+         <item quantity="one">Zdá sa, že ste %s týždeň nezálohovali položky. Vytvorte zálohy, aby ste nestratili nič dôležité.</item>
      </plurals>      
 </resources>
