--- a/Slovak/main/MiuiHome.apk/res/values-sk/arrays.xml
+++ b/Slovak/main/MiuiHome.apk/res/values-sk/arrays.xml
@@ -73,4 +73,9 @@
         <item>Vľavo</item>
         <item>Vpravo</item>
     </string-array>
+    <string-array name="animation_rate_entries">
+        <item>Elegantné</item>
+        <item>Vyvážené</item>
+        <item>Minimalistické</item>
+    </string-array>	
 </resources>
