--- a/Slovak/main/SecurityCenter.apk/res/values-sk/plurals.xml
+++ b/Slovak/main/SecurityCenter.apk/res/values-sk/plurals.xml
@@ -1020,4 +1020,13 @@ Dajte si pauzu!"</item>
         <item quantity="other">%2$1.2f h zostáva</item>
         <item quantity="one">%2$1.2f h zostáva</item>
     </plurals>    
+    
+    <plurals name="gb_smart_battery_hrs">
+        <item quantity="other">%d h</item>
+        <item quantity="one">%d h</item>
+    </plurals>
+    <plurals name="gb_smart_battery_min">
+        <item quantity="other">%d min</item>
+        <item quantity="one">%d min</item>
+    </plurals>    
 </resources>
