--- a/Slovak/main/SecurityCenter.apk/res/values-sk/plurals.xml
+++ b/Slovak/main/SecurityCenter.apk/res/values-sk/plurals.xml
@@ -1030,7 +1030,7 @@ Dajte si pauzu!"</item>
         <item quantity="one">%d min</item>
     </plurals>    
 <plurals name="mtrl_badge_content_description">
-         <item kvantita="other">%d nových upozornení</item>
-         <item kvantita="one">%d nové upozornenie</item>
+         <item quantity="other">%d nových upozornení</item>
+         <item quantity="one">%d nové upozornenie</item>
      </plurals>	
 </resources>
