--- a/Slovak/main/SecurityCenter.apk/res/values-sk/arrays.xml
+++ b/Slovak/main/SecurityCenter.apk/res/values-sk/arrays.xml
@@ -273,4 +273,16 @@
         <item>MB</item>
         <item>GB</item>
     </string-array>
+<string-array name="sort_title_new">
+         <item>Zoradiť podľa názvu aplikácie</item>
+         <item>Zoradiť podľa frekvencie používania</item>
+         <item>Zoradiť podľa využitého úložiska</item>
+         <item>Zoradiť podľa času inštalácie</item>
+      </string-array>
+      <string-array name="sort_type_new">
+         <item>Názov aplikácie</item>
+         <item>Frekvencia používania</item>
+         <item>Využitý ukladací priestor</item>
+         <item>Čas inštalácie</item>
+      </string-array> 
 </resources>
