--- a/Slovak/main/SecurityCenter.apk/res/values-sk/plurals.xml
+++ b/Slovak/main/SecurityCenter.apk/res/values-sk/plurals.xml
@@ -1033,4 +1033,21 @@ Dajte si pauzu!"</item>
          <item quantity="other">%d nových upozornení</item>
          <item quantity="one">%d nové upozornenie</item>
      </plurals>	
+     
+    <plurals name="power_battery_hour">
+        <item quantity="other">%s h</item>
+        <item quantity="one">%s h</item>
+    </plurals>
+    <plurals name="power_battery_minute">
+        <item quantity="other">%s min</item>
+        <item quantity="one">%s min</item>
+    </plurals>
+    <plurals name="power_main_battery_last_minute_screen_on">
+        <item quantity="other">%s min ostáva</item>
+        <item quantity="one">%s min ostáva</item>
+    </plurals>
+    <plurals name="power_main_open_last_minute_screen_on">
+        <item quantity="other">Povoľte pre pridanie %s min svietenia displeja</item>
+        <item quantity="one">Povoľte pre pridanie %s min svietenia displeja</item>
+    </plurals>         
 </resources>
