--- a/Slovak/main/SecurityAdd.apk/res/values-sk/plurals.xml
+++ b/Slovak/main/SecurityAdd.apk/res/values-sk/plurals.xml
@@ -73,4 +73,17 @@
         <item quantity="other">Nepridaných apl.: %d</item>
         <item quantity="one">Nepridaných apl.: %d</item>
     </plurals>
+    
+<plurals name="power_battery_hour">
+         <item quality="other">%s h</item>
+         <item kvantita="one">%s h</item>
+     </plurals>
+     <plurals name="power_battery_minute">
+         <item quality="other">%s min</item>
+         <item number="one">%s min</item>
+     </plurals>
+     <plurals name="power_main_battery_last_minute_screen_on">
+         <item kvantita="other">Zostáva %s minút času displeja</item>
+         <item kvantita="one">Zostáva %s min času displeja</item>
+     </plurals>    
 </resources>
