--- a/Slovak/main/DownloadProvider.apk/res/values-sk/plurals.xml
+++ b/Slovak/main/DownloadProvider.apk/res/values-sk/plurals.xml
@@ -14,11 +14,11 @@
     </plurals>
     
 <plurals name="dialog_confirm_delete_downloads_message">
-         <item kvantita="other">Odstrániť %d stiahnutí?</item>
-         <item kvantita="one">Odstrániť %d stiahnutie?</item>
+         <item quantity="other">Odstrániť %d stiahnutí?</item>
+         <item quantity="one">Odstrániť %d stiahnutie?</item>
      </plurals>
      <plurals name="download_info_count_deleted_tasks">
-         <item kvantita="other">Stiahnuté súbory %s boli úspešne odstránené</item>
-         <item kvantita="one">Sťahovanie %s bolo úspešne odstránené</item>
+         <item quantity="other">Stiahnuté súbory %s boli úspešne odstránené</item>
+         <item quantity="one">Sťahovanie %s bolo úspešne odstránené</item>
      </plurals>    
 </resources>
