--- a/Slovak/main/InCallUI.apk/res/values-sk/plurals.xml
+++ b/Slovak/main/InCallUI.apk/res/values-sk/plurals.xml
@@ -97,4 +97,45 @@
         <item quantity="other">Žiadne dátové pripojenie po dobu %s minút</item>
         <item quantity="one">Žiadne dátové pripojenie po dobu %s minúty</item>
     </plurals>
+	
+<plurals name="call_log_day_in">
+        <item quantity="other">Toto číslo vám volalo pred %1$s dňami</item>
+        <item quantity="one">Toto číslo vám volalo pred %1$s dňom</item>
+    </plurals>
+    <plurals name="call_log_day_out">
+        <item quantity="other">Toto číslo ste volali pred %1$s dňami</item>
+        <item quantity="one">Toto číslo ste volali pred %1$s dňom</item>
+    </plurals>
+    <plurals name="call_log_hour_in">
+        <item quantity="other">Toto číslo vám volalo pred %1$s h</item>
+        <item quantity="one">Toto číslo vám volalo pred %1$s h</item>
+    </plurals>
+    <plurals name="call_log_hour_out">
+        <item quantity="other">Na toto číslo ste volali pred %1$s h</item>
+        <item quantity="one">Toto číslo ste volali pred %1$s h</item>
+    </plurals>
+    <plurals name="call_log_minute_in">
+        <item quantity="other">Toto číslo vám volalo pred %1$s minútami</item>
+        <item quantity="one">Toto číslo vám volalo pred %1$s min</item>
+    </plurals>
+    <plurals name="call_log_minute_out">
+        <item quantity="other">Toto číslo ste volali pred %1$s minútami</item>
+        <item quantity="one">Toto číslo ste volali pred %1$s min</item>
+    </plurals>
+    <plurals name="call_log_month_in">
+        <item quantity="other">Toto číslo vám volalo pred %1$s mesiacmi</item>
+        <item quantity="one">Toto číslo vám volalo pred %1$s mesiacom</item>
+    </plurals>
+    <plurals name="call_log_month_out">
+        <item quantity="other">Toto číslo ste volali pred %1$s mesiacmi</item>
+        <item quantity="one">Toto číslo ste volali pred %1$s mesiacom</item>
+    </plurals>
+    <plurals name="call_log_year_in">
+        <item quantity="other">Toto číslo vám volalo pred %1$s rokmi</item>
+        <item quantity="one">Toto číslo vám volalo pred %1$s rokom</item>
+    </plurals>
+    <plurals name="call_log_year_out">
+        <item quantity="other">Toto číslo ste volali pred %1$s rokmi</item>
+        <item quantity="one">Toto číslo ste volali pred %1$s rokom</item>
+    </plurals>	
 </resources>
