--- a/Slovak/main/CloudBackup.apk/res/values-sk/plurals.xml
+++ b/Slovak/main/CloudBackup.apk/res/values-sk/plurals.xml
@@ -88,4 +88,13 @@
         <item quantity="other">Ostáva okolo %s min</item>
         <item quantity="one">Ostáva okolo %s min</item>
     </plurals>
+    
+<plurals name="session_starting_app_count_backup_text">
+         <item quantity="other">Zálohovaných %d aplikácií</item>
+         <item quantity="one">Zálohovaná %d aplikácia</item>
+     </plurals>
+     <plurals name="session_starting_app_count_restore_text">
+         <item quantity="other">obnovených %d aplikácií</item>
+         <item quantity="one">Obnovená %d aplikácia</item>
+     </plurals>    
 </resources>
