--- a/Slovak/main/MiSound.apk/res/values-sk/plurals.xml
+++ b/Slovak/main/MiSound.apk/res/values-sk/plurals.xml
@@ -56,4 +56,9 @@
         <item quantity="other">Pred %d minútami</item>
         <item quantity="one">Pred minútou</item>
     </plurals>
+    
+<plurals name="rename_error_longer_effect_name">
+         <item quantity="other">Tu môžete zadať až %d znakov</item>
+         <item quantity="one">Tu môžete zadať až %d znak</item>
+     </plurals>    
 </resources>
