--- a/Slovak/main/Settings.apk/res/values-sk/arrays.xml
+++ b/Slovak/main/Settings.apk/res/values-sk/arrays.xml
@@ -1125,4 +1125,10 @@ Postupujte podľa pokynov"</item>
         <item>Mierka animácie 5x</item>
         <item>Mierka animácie 10x</item>
     </string-array>
+	
+    <string-array name="typing_style_entries">
+        <item>Štandardné</item>
+        <item>Dotyk</item>
+        <item>Priamy dotyk</item>
+    </string-array>	
 </resources>
