--- a/Slovak/main/Contacts.apk/res/values-sk/plurals.xml
+++ b/Slovak/main/Contacts.apk/res/values-sk/plurals.xml
@@ -221,4 +221,9 @@
         <item quantity="other">Ľudí: %1$d</item>
         <item quantity="one">Ľudí: %1$d</item>
     </plurals>
+	
+    <plurals name="notification_missedCallsMsg">
+        <item quantity="other">%d zmeškané hovory</item>
+        <item quantity="one">%d zmeškaný hovor</item>
+    </plurals>	
 </resources>
