--- a/Slovak/main/MiuiGallery.apk/res/values-sk/arrays.xml
+++ b/Slovak/main/MiuiGallery.apk/res/values-sk/arrays.xml
@@ -407,4 +407,9 @@
         <item>Zimné dni</item>
         <item>Zimná krajina zázrakov</item>
     </string-array>
+    
+    <string-array name="account_user_gender_name">
+        <item>Muž</item>
+        <item>Žena</item>
+    </string-array>    
 </resources>
